Update register page

--- a/serestaurant/Admin/register/index.html
+++ b/serestaurant/Admin/register/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="register-page">
+        <form class="register-box">
+        <h2>Đăng kí</h2>
+        <input type="text" placeholder="Họ tên">
+        <input type="email" placeholder="Email">
+        <input type="password" placeholder="Mật khẩu">
+        <button>Đăng ký</button>
+        </form>
+    </div>
 </body>
 </html>
