Update login page

--- a/serestaurant/Admin/register/index.html
+++ b/serestaurant/Admin/register/index.html
@@ -10,7 +10,7 @@
     <div class="register-page">
         <form class="register-box">
         <h2>Đăng kí</h2>
-        <input type="text" placeholder="Họ tên">
+        <input type="text" placeholder="Tên đăng nhập">
         <input type="email" placeholder="Email">
         <input type="password" placeholder="Mật khẩu">
         <button>Đăng ký</button>
