--- a/serestaurant/Admin/Dashboard/index.html
+++ b/serestaurant/Admin/Dashboard/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SE restauraunt</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="taskbar">
+        <h1 class="taskbar_banner">SE RESTAURAUNT</h1>
+    </div>
 </body>
 </html>
