Update menu taskbar

--- a/serestaurant/Admin/Dashboard/index.html
+++ b/serestaurant/Admin/Dashboard/index.html
@@ -5,10 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SE restauraunt</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="taskbar">
-        <h1 class="taskbar_banner">SE RESTAURAUNT</h1>
+        <div class="taskbar_banner">
+            <h1>SE</h1>
+            <h2>Restauraunt</h2>
+        </div>
+        <div class="taskbar_menu">
+            <button class="button">
+                <h2>Menu</h2>
+            </button>
+            <button class="button">
+                <h2>Đặt chỗ</h2>
+            </button>
+            <button class="button">
+                <h2>Ngân sách</h2>
+            </button>
+            <button class="button">
+                <h2>Nhân viên</h2>
+            </button>
+            <button class="button">
+                <h2>Khách hàng</h2>
+            </button>
+            <button class="button">
+                <h2>Báo cáo</h2>
+            </button>
+        </div>
+        <div >
+            <button class="button">
+                <h2 class="taskbar_setting"> <i class="fas fa-gear"></i> Setting</h2>
+            </button>
+        </div>
     </div>
 </body>
 </html>
