--- a/ADMIN/dashboard/index.html
+++ b/ADMIN/dashboard/index.html
@@ -20,8 +20,17 @@
             <li class="menu-item" data-page="reservation">
                 <i class="fas fa-calendar-check"></i> Đặt chỗ
             </li>
-            <li class="menu-item" data-page="budget">
-                <i class="fas fa-wallet"></i> Ngân sách
+            <li class="menu-item" data-page="finance">
+            <i class="fas fa-chart-pie"></i> Báo cáo
+            </li>
+            <li class="menu-item" data-page="customer">
+            <i class="fas fa-users"></i> Khách hàng
+            </li>
+            <li class="menu-item" data-page="staff">
+            <i class="fas fa-user-tie"></i> Nhân viên
+            </li>
+            <li class="menu-item" data-page="table">
+            <i class="fas fa-chair"></i> Quản lý bàn
             </li>
         </ul>
         <div class="sidebar_item_setting">
