Update web manager và tạo web admin

--- a/Manager/dasboard.html
+++ b/Manager/dasboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SE restauraunt</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -17,8 +17,8 @@
             <li class="menu-item" data-page="menu">
                 <i class="fas fa-utensils"></i> Menu
             </li>
-            <li class="menu-item" data-page="reservation">
-                <i class="fas fa-calendar-check"></i> Đặt chỗ
+            <li class="menu-item" data-page="table-reservation">
+            <i class="fas fa-chair"></i> Bàn & Đặt chỗ
             </li>
             <li class="menu-item" data-page="finance">
             <i class="fas fa-chart-pie"></i> Báo cáo
@@ -28,9 +28,6 @@
             </li>
             <li class="menu-item" data-page="staff">
             <i class="fas fa-user-tie"></i> Nhân viên
-            </li>
-            <li class="menu-item" data-page="table">
-            <i class="fas fa-chair"></i> Quản lý bàn
             </li>
         </ul>
         <div class="sidebar_item_setting">
@@ -56,6 +53,6 @@
 
     <section id="content" class="content"></section>
 
-    <script src="index.js"></script>
+    <script src="dashboard.js"></script>
 </body>
 </html>
