--- a/ADMIN/admin.html
+++ b/ADMIN/admin.html
@@ -3,43 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>S2O - Quản trị hệ thống</title>
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <title>S2O - Admin Dashboard</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/admin.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <aside class="sidebar"> <div class="logo">
+    <aside class="sidebar">
+        <div class="logo">
             <h1>S2O</h1>
-            <h2>Hệ thống Admin</h2>
+            <h2>Admin System</h2>
         </div>
         <ul class="menu">
-            <li class="menu-item active" data-page="dashboard">
-                <i class="fas fa-chart-line"></i> Tổng quan
-            </li>
-            <li class="menu-item" data-page="tenants">
-                <i class="fas fa-store"></i> Nhà hàng (Tenants)
-            </li>
-            <li class="menu-item" data-page="users">
-                <i class="fas fa-users-cog"></i> Người dùng
-            </li>
-            <li class="menu-item" data-page="ai-config">
-                <i class="fas fa-robot"></i> Cấu hình AI
-            </li>
+            <li class="menu-item active" data-page="dashboard"><i class="fas fa-chart-line"></i> Tổng quan</li>
+            <li class="menu-item" data-page="tenants"><i class="fas fa-store"></i> Đối tác (Tenants)</li>
+            <li class="menu-item" data-page="users"><i class="fas fa-users-cog"></i> Người dùng</li>
+            <li class="menu-item" data-page="ai-config"><i class="fas fa-robot"></i> Cấu hình AI</li>
         </ul>
     </aside>
 
     <div class="content-wrapper">
         <header class="header">
             <h2 id="page-title">Tổng quan hệ thống</h2>
-            <div class="user-info">
-                <span>Xin chào, Admin</span>
-            </div>
+            <div class="user-info">Xin chào, <strong>Super Admin</strong></div>
         </header>
-
-        <main id="content" class="main-content">
-            </main>
+        <main id="content" class="main-content"></main>
     </div>
 
-    <script src="admin.js"></script>
+    <script src="../js/admin.js"></script>
 </body>
 </html>
