Liên kết dữ liệu từ supabase về cho phần tenant, restaurant

--- a/ADMIN/admin.html
+++ b/ADMIN/admin.html
@@ -15,10 +15,10 @@
             <h2>Admin System</h2>
         </div>
         <ul class="menu">
-            <li class="menu-item active" data-page="dashboard"><i class="fas fa-chart-line"></i> Tổng quan</li>
-            <li class="menu-item" data-page="tenants"><i class="fas fa-store"></i> Đối tác (Tenants)</li>
-            <li class="menu-item" data-page="users"><i class="fas fa-users-cog"></i> Người dùng</li>
-            <li class="menu-item" data-page="ai-config"><i class="fas fa-robot"></i> Cấu hình AI</li>
+            <li class="menu-item active" data-page="dashboard"><i class="fas fa-chart-line"></i>Tổng quan</li>
+            <li class="menu-item" data-page="tenants"><i class="fas fa-store"></i>Restaurant</li>
+            <li class="menu-item" data-page="users"><i class="fas fa-users-cog"></i>Đối tác</li>
+            <li class="menu-item" data-page="ai-config"><i class="fas fa-robot"></i>Cấu hình AI</li>
         </ul>
     </aside>
 
@@ -29,7 +29,7 @@
         </header>
         <main id="content" class="main-content"></main>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="../js/admin.js"></script>
 </body>
 </html>
