update đăng xuất

--- a/ADMIN/admin.html
+++ b/ADMIN/admin.html
@@ -28,6 +28,17 @@
             <div class="user-info">Xin chào, <strong>Super Admin</strong></div>
         </header>
         <main id="content" class="main-content"></main>
+        <div class="sidebar-footer">
+        <div class="sidebar-user">
+            <i class="fas fa-user-shield"></i>
+            <span id="admin-name">Super Admin</span>
+        </div>
+
+        <button id="logout-btn" class="logout-btn">
+            <i class="fas fa-sign-out-alt"></i> Đăng xuất
+        </button>
+    </div>
+</aside>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="../js/admin.js"></script>
