--- a/Manager/manager.html
+++ b/Manager/manager.html
@@ -53,6 +53,7 @@
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+        <script src="../js/supabaseClient.js"></script>
         <script src="../js/manager.js"></script>
 </body>
 </html>
