update login thành login manager và login admin

--- a/Login/loginAdmin.html
+++ b/Login/loginAdmin.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Đăng nhập & Đăng ký</title>
         <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-        <link rel="stylesheet" href="../css/login.css">
+        <link rel="stylesheet" href="../css/loginAdmin.css">
     </head>
     <body>
         
@@ -117,7 +117,7 @@
         </div>
 
         <div id="toast-message" class="toast hidden"></div>
-        <script src="../js/login.js"></script>
+        <script src="../js/loginAdmin.js"></script>
 
     </body>
 </html>
