Sửa logic login và logic xóa bàn

--- a/Login/loginManager.html
+++ b/Login/loginManager.html
@@ -67,10 +67,11 @@
                         <div class="select-wrapper">
                             <select id="rest-cuisine" required>
                                 <option value="" disabled selected>Chọn loại ẩm thực</option>
-                                <option value="vietnamese">Món Việt</option>
-                                <option value="korean">Món Hàn</option>
-                                <option value="japanese">Món Nhật</option>
-                                <option value="western">Âu Mỹ</option>
+                                <option value="Việt Nam">Món Việt</option>
+                                <option value="Hàn">Món Hàn</option>
+                                <option value="Nhật">Món Nhật</option>
+                                <option value="Âu">Âu Mỹ</option>
+                                <option value="Trung Quốc">Món Trung</option>
                                 <option value="other">Khác</option>
                             </select>
                         </div>
